--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Leon Schüep – Tischtennisspieler</title>
     <link rel="stylesheet" href="style.css">
 
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="https://use.typekit.net/myo8djp.css">
 
