--- a/index.html
+++ b/index.html
@@ -51,8 +51,21 @@
 
         <div class="hidden-text">
          <p>
-            Artikel coming soon...
-            </p>
+    Mitte November hatte ich die Möglichkeit, in Helsingborg, Schweden an der Para-EM mitzumachen. Für mich war die EM mein
+    erstes grosses Turnier auf internationaler Bühne und dementsprechend konnte ich tolle Erfahrung sammeln.
+  </p>
+
+  <p class="blog-link">
+    <a href="https://www.swisstabletennis.ch/naechste-schritte-nach-dem-em-debuet/" target="_blank">
+      Nächste Schritte nach dem EM-Debüt
+    </a>
+  </p>
+
+  <p>
+    Der obige Link führt zu einem Interview, welches ich für SwissTableTennis gegeben habe. Dort könnt ihr mehr über meine Erfahrungen erfahren.
+  </p>
+
+            
         </div>
     </figure>
  
