--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </p>
 
   <p>
-    Der obige Link führt zu einem Interview, welches ich für SwissTableTennis gegeben habe. Dort könnt ihr mehr über meine Erfahrungen erfahren.
+    Der obige Link führt zu einem Interview, welches ich für SwissTableTennis gegeben habe. Dort könnt ihr mehr erfahren.
   </p>
 
             
